# SuidScan

./: Cargo.toml  LICENSE
crates/libs/lib-binary/: Cargo.toml
crates/libs/lib-binary/src/binary/: mod.rs
crates/libs/lib-checker/: Cargo.toml
crates/libs/lib-checker/src/: config.rs  lib.rs
crates/libs/lib-checker/src/checker/: error.rs  mod.rs
